interaction client to server database

--- a/src/main/resources/templates/fastSearchPage.html
+++ b/src/main/resources/templates/fastSearchPage.html
@@ -3,21 +3,27 @@
 <html xmlns="http://www.thymeleaf.org">
     <head>
         <title>fast search test</title>
-        <style>
-            *{
-                margin: 0;
-                padding: 0;
-            }
-        </style>
         <script type="text/javascript" src="js/fastSearch.js" defer></script>
+        <link rel="stylesheet" href="css/fastSearch.css"/>
     </head>
-    <body style="padding: 1%;">
+    <body>
         <input id="name_input_bar"/>
         <div id="suggest_dropdown">
             <!-- <div class="suggest_element">
                 <p class="suggest_product_id">9971</p>
                 <p class="suggest_name">apollo</p> -->
             </div>
+        </div>
+
+        <div id="move_list">
+            <!-- <div class="move_element">
+                <div class="move_id">9971</div>
+                <div class="move_name">apollo cake 24pcs</div>
+            </div>
+            <div class="move_element">
+                <div class="move_id">9971</div>
+                <div class="move_name">apollo cake</div>
+            </div> -->
         </div>
     </body>
 </html>
