--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             
-            <div id="measurement_list">
+            <div id="measurement_list" class="top_margin">
                 <button id="create_measure_button">create new measurement</button>
                 <div id="measure_list_header" class="measure">
                     <div class="label">Measurement UOM</div>
@@ -34,9 +34,9 @@
                     <div class="label">Barcode</div>
                 </div>
                 <div id="measure_product-UNIT" class="row measure">
-                    <div class="measure_uom_name"></div>
+                    <div class="measure_uom_name">UNIT</div>
                     <div class="measure_size">1</div>
-                    <div class="relative_id"></div>
+                    <div class="relative_id">9771-UNIT</div>
                     <div class="barcode"></div>
                     <button class="measure_edit tiny_button">edit</button>
                 </div>
