--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -40,6 +40,13 @@
                     <div class="barcode"></div>
                     <button class="measure_edit tiny_button">edit</button>
                 </div>
+                <div id="measure_product-UNIT" class="row measure">
+                    <div class="measure_uom_name">UNIT</div>
+                    <div class="measure_size">1</div>
+                    <div class="relative_id">9771-UNIT</div>
+                    <div class="barcode"></div>
+                    <button class="measure_edit tiny_button">edit</button>
+                </div>
             </div>
 
             <div id="bottom_section">
