--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
+    <link rel="stylesheet" href="/css/productlist.css">
     <!-- <script>
         function redirect(id){
             let host = window.locatoin.host;
@@ -12,10 +13,12 @@
     </script> -->
 </head>
 <body>
-    <div th:each="product : ${products}">
-        <a th:href="@{/product/{productId}(productId=${product.id})}" th:text="${product.name}">
-            
-        </a>
+    <div class="product_container" th:each="product : ${products}">
+        <div class="product_cell">
+            <div class="product_id" th:text="${product.id}"></div>
+            <div class="product_name" th:text="${product.name}"></div>
+            <a class="product_edit" th:href="@{/product/{productId}(productId=${product.id})}">edit</a>
+        </div>
     </div>
 </body>
 </html>
